syntax = "proto3";
package private;
option go_package = "platform/go/proto/private";

import "shared/feature_toggle.proto";

message EnvironmentVersion {
  string id = 1;
  int64 version = 2;
}

message EnvironmentFeatureToggles {
  string id = 1;
  int64 starting_version = 2;
  int64 ending_version = 3;
  repeated feature_toggle.FeatureToggle feature_toggles = 4;
}